# workflow-orchestration-queue-november57-a

./: .ai-repository-summary.md  .assembled-orchestrator-prompt.md  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: .labels.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.opencode/agents/: orchestrator.md
docs/: README.md  implementation-plan.md
docs/debrief-and-document/: debrief-report.md  trace.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/os_apow/: __init__.py  config.py  main.py
src/os_apow/brain/: __init__.py
src/os_apow/ear/: __init__.py  hmac.py  routes.py
src/os_apow/hands/: __init__.py
src/os_apow/state/: __init__.py  models.py
test/: test-opencode-run.sh
tests/: conftest.py  test_main.py
